Do not turn on aria-live automatically for alert dialog

Bug: 595228
Change-Id: I3a493620eb00813a7e601de1c1d2f3a1e62693d9
Reviewed-on: https://chromium-review.googlesource.com/529326
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479747}
Former-commit-id: 35266f16e54a84c33dc4647b5d16a36edd54ba10